--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,21 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="end">
-      <ion-button (click)="logout()">
-        <ion-icon name="log-out"></ion-icon>
+<ion-content class="ion-padding" *ngIf="user">
+  <div class="card-container">
+    <ion-card class="user-card">
+      <img class="user-image" src='assets/logo_team.jpg' alt="User Image"/>
+      <ion-button class="logout-button" (click)="logout()">
+        <ion-icon name="log-out-outline"></ion-icon>
       </ion-button>
-    </ion-buttons>
-    <ion-title>Home</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content *ngIf="user">
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>{{ user.name }}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <p>Email: {{ user.email }}</p>
-    </ion-card-content>
-  </ion-card>
+      <ion-card-header>
+        <ion-card-title class="user-name">{{ user.name }}</ion-card-title>
+        <ion-card-subtitle class="user-email">{{ user.email }}</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        <div class="button-container">
+          <ion-button expand="full" class="rounded-button">Incidencias IT</ion-button>
+          <ion-button expand="full" class="rounded-button">Reserva Vehículos</ion-button>
+        </div>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
