Incidence addition & filtering

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,7 +11,7 @@
       </ion-card-header>
       <ion-card-content>
         <div class="button-container">
-          <ion-button expand="full" class="rounded-button">Incidencias IT</ion-button>
+          <ion-button expand="full" [routerLink]="['/incidences']" class="rounded-button">Incidencias IT</ion-button>
           <ion-button expand="full" class="rounded-button">Reserva Vehículos</ion-button>
         </div>
       </ion-card-content>
