--- a/src/app/components/incidence-modal/incidence-modal.component.html
+++ b/src/app/components/incidence-modal/incidence-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Añadir Incidencia</ion-title>
+    <ion-title>{{ incidence ? 'Editar Incidencia' : 'Añadir Incidencia' }}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="cancel()">Cerrar</ion-button>
     </ion-buttons>
@@ -34,5 +34,7 @@
     </ion-range>
   </ion-item>
 
-  <ion-button expand="full" (click)="confirm()">Añadir Incidencia</ion-button>
+  <ion-button expand="full" (click)="confirm()">
+    {{ incidence ? 'Guardar Cambios' : 'Añadir Incidencia' }}
+  </ion-button>
 </ion-content>
