--- a/src/app/pages/incidences/incidences.page.html
+++ b/src/app/pages/incidences/incidences.page.html
@@ -25,7 +25,12 @@
   <ion-card *ngFor="let incidence of filteredIncidences()" class="card-container">
     <div style="flex: 1;">
       <ion-card-header>
-        <ion-card-title>{{ incidence.title }}</ion-card-title>
+        <ion-card-title dis>
+          {{ incidence.title }}
+          <ion-icon *ngIf="incidence.priority === 1" name="warning" color="success" class="icono_prior"></ion-icon>
+          <ion-icon *ngIf="incidence.priority === 2" name="warning" color="warning" class="icono_prior"></ion-icon>
+          <ion-icon *ngIf="incidence.priority === 3" name="warning" color="danger" class="icono_prior"></ion-icon>
+        </ion-card-title>
         <ion-card-subtitle>
           <p>{{ incidence.description }}</p>
         </ion-card-subtitle>
@@ -41,7 +46,7 @@
         </div>
       </ion-card-content>
     </div>
-
+  
     <div class="button-container">
       <ion-button (click)="editIncidence(incidence)" fill="clear" size="large" color="primary" style="margin-bottom: 5px;">
         <ion-icon name="create" slot="icon-only" style="font-size: 24px;"></ion-icon>
