Incidence order by priority & date

--- a/src/app/pages/incidences/incidences.page.html
+++ b/src/app/pages/incidences/incidences.page.html
@@ -22,7 +22,7 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ion-card *ngFor="let incidence of filteredIncidences()" class="card-container">
+  <ion-card *ngFor="let incidence of orderedIncidences()" class="card-container">
     <div style="flex: 1;">
       <ion-card-header>
         <ion-card-title dis>
