--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,7 +12,7 @@
       <ion-card-content>
         <div class="button-container">
           <ion-button expand="full" [routerLink]="['/incidences']" class="rounded-button">Incidencias IT</ion-button>
-          <ion-button expand="full" class="rounded-button">Reserva Vehículos</ion-button>
+          <ion-button expand="full" [routerLink]="['/vehicles']" class="rounded-button">Reserva Vehículos</ion-button>
         </div>
       </ion-card-content>
     </ion-card>
