--- a/src/app/pages/vehicles/vehicles.page.html
+++ b/src/app/pages/vehicles/vehicles.page.html
@@ -1,13 +1,38 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>vehicles</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Reservar Vehículos</ion-title>
+    <ion-buttons slot="end">
+      <ion-button>Mis Reservas</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">vehicles</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding custom-background">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" size-md="4" *ngFor="let vehicle of vehicles">
+        <ion-card class="vehicle-card">
+          <img src="../../../assets/dacia.png" alt="Vehicle 1">
+          <!-- Iconos con ngClass para cambiar el color según el estado -->
+          <div class="icons-container">
+            <i class="fa-solid fa-truck-monster"
+               [ngClass]="vehicle.isFourByFour ? 'icon-active' : 'icon-inactive'"></i>
+            <i class="fa-solid fa-gas-pump"
+               [ngClass]="vehicle.needsFuel ? 'icon-red' : 'icon-inactive'"></i>
+            <i class="fa-solid fa-wrench"
+               [ngClass]="vehicle.needsRepair ? 'icon-yellow' : 'icon-inactive'"></i>
+          </div>
+          <ion-card-header>
+            <ion-card-title> {{ vehicle.model }} </ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <p> {{ vehicle.licensePlate }} </p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
