--- a/src/app/pages/vehicles/vehicles.page.html
+++ b/src/app/pages/vehicles/vehicles.page.html
@@ -14,16 +14,13 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6" size-md="4" *ngFor="let vehicle of vehicles">
-        <ion-card class="vehicle-card">
+        <ion-card class="vehicle-card" (click)="goToReservation(vehicle.licensePlate)">
           <img src="../../../assets/dacia.png" alt="Vehicle 1">
           <!-- Iconos con ngClass para cambiar el color según el estado -->
           <div class="icons-container">
-            <i class="fa-solid fa-truck-monster"
-               [ngClass]="vehicle.isFourByFour ? 'icon-active' : 'icon-inactive'"></i>
-            <i class="fa-solid fa-gas-pump"
-               [ngClass]="vehicle.needsFuel ? 'icon-red' : 'icon-inactive'"></i>
-            <i class="fa-solid fa-wrench"
-               [ngClass]="vehicle.needsRepair ? 'icon-yellow' : 'icon-inactive'"></i>
+            <i class="fa-solid fa-truck-monster" [ngClass]="vehicle.isFourByFour ? 'icon-active' : 'icon-inactive'"></i>
+            <i class="fa-solid fa-gas-pump" [ngClass]="vehicle.needsFuel ? 'icon-red' : 'icon-inactive'"></i>
+            <i class="fa-solid fa-wrench" [ngClass]="vehicle.needsRepair ? 'icon-yellow' : 'icon-inactive'"></i>
           </div>
           <ion-card-header>
             <ion-card-title> {{ vehicle.model }} </ion-card-title>
