--- a/src/app/pages/vehicles/vehicles.page.scss
+++ b/src/app/pages/vehicles/vehicles.page.scss
@@ -17,6 +17,7 @@ ion-content {
     text-align: center;
     border-radius: 15px;
     overflow: hidden;
+    background: rgba(255, 255, 255, 0.9); /* Fondo blanco con 80% de opacidad */
   }
   
   .vehicle-card img {
