Calendar dates fixed

--- a/src/app/pages/reservation/reservation.page.html
+++ b/src/app/pages/reservation/reservation.page.html
@@ -16,7 +16,7 @@
       <div class="icons-container">
         <i class="fa-solid fa-truck-monster" [ngClass]="vehicle.isFourByFour ? 'icon-active' : 'icon-inactive'"></i>
         <i class="fa-solid fa-gas-pump" [ngClass]="vehicle.needsFuel ? 'icon-red' : 'icon-inactive'"></i>
-        <i class="fa-solid fa-wrench" [ngClass]="vehicle.needsRepair ? 'icon-yellow' : 'icon-inactive'"></i>
+        <i class="fa-solid fa-wrench" [ngClass]="vehicle.needsRepair ? 'icon-red' : 'icon-inactive'"></i>
       </div>
     </div>
   </div>
