Reservation overlapping management

--- a/src/app/pages/vehicles/vehicles.page.html
+++ b/src/app/pages/vehicles/vehicles.page.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Reservar Vehículos</ion-title>
+    <ion-title>Reservar vehículos</ion-title>
     <ion-buttons slot="end">
-      <ion-button>Mis Reservas</ion-button>
+      <ion-button [routerLink]="['/reservations']">Consultar reservas</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
