--- a/src/app/pages/reservations/reservations.page.scss
+++ b/src/app/pages/reservations/reservations.page.scss
@@ -11,7 +11,7 @@
 .date-container {
   display: flex;
   justify-content: center; /* Centra la tarjeta en el contenedor */
-  margin: 16px;
+  margin: 16px;  
 }
 
 .date-card {
@@ -25,10 +25,50 @@
   margin: 0; /* Elimina el margen para que no afecte el ancho */
   width: 300px; /* Ajusta el ancho según sea necesario */
   max-width: 90%; /* Asegura que no ocupe más del 90% del ancho de la pantalla */
+  background: rgba(255, 255, 255, 0.9);
 }
 
 .date-display {
   cursor: pointer;
   padding: 0 10px;
   font-size: 18px; /* Ajusta según necesites */
+}
+
+.vehicle-list {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.vehicle-card {
+  display: flex; /* Usar flexbox para alinear la imagen y los detalles */
+  flex-direction: column;
+  align-items: flex-start; /* Centrar verticalmente */
+  background: #fff; /* Fondo blanco */
+  border-radius: 10px; /* Bordes redondeados */
+  margin: 10px 0;
+  padding-left: 30px; /* Ajustar el padding */
+  padding-top: 20px;
+  background: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  cursor: pointer;
+  transition: transform 0.2s; /* Animación al hacer hover */
+}
+
+.vehicle-image {
+  width: 80px; /* Ancho de la imagen */
+  height: auto; /* Mantener la relación de aspecto */
+  margin-right: 10px; /* Espacio entre la imagen y los detalles */
+}
+
+.vehicle-details {
+  flex-grow: 1; /* Permitir que el contenedor de detalles ocupe el espacio restante */
+}
+
+.reservation-card {
+  background: #f0f0f0; /* Fondo gris claro para la tarjeta de reserva */
+  border-radius: 5px; /* Bordes redondeados */
+  padding: 10px; /* Espaciado interno */
+  margin-top: 10px; /* Margen superior para separación */
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); /* Sombra ligera */
 }
