--- a/src/app/pages/reservations/reservations.page.html
+++ b/src/app/pages/reservations/reservations.page.html
@@ -34,15 +34,31 @@
       
       <!-- Detalles de reservas -->
       <div *ngIf="selectedVehicle === vehicle" class="reservations-details">
-        <p>Detalles de las reservas para este vehículo:</p>
-        <div *ngFor="let reservation of getReservationsForVehicle(vehicle.licensePlate)" class="reservation-card">
-          <p>Reserva ID: {{ reservation.id }}</p>
-          <p>Fecha Inicio: {{ reservation.startDate }}</p>
-          <p>Fecha Fin: {{ reservation.endDate }}</p>
-          <p>Km Estimados: {{ reservation.estimatedKm }}</p>
-          <p>Código de Proyecto: {{ reservation.projectCode }}</p>
-          <p>Nombre Usuario: {{ reservation.userName }}</p> <!-- Mostrar el nombre del usuario -->
-        </div>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6" *ngFor="let reservation of getReservationsForVehicle(vehicle.licensePlate)">
+              <div class="reservation-card" [ngClass]="{'active-card': reservation.active, 'inactive-card': !reservation.active}">
+                <p>
+                  <ion-icon name="calendar"></ion-icon>
+                  {{ formatReservationDate(reservation.startDate) }} <!-- Formateamos la fecha de inicio -->
+                </p>
+                <p>
+                  <ion-icon name="calendar"></ion-icon> 
+                  {{ formatReservationDate(reservation.endDate) }} <!-- Formateamos la fecha de fin -->
+                </p>
+                <p>
+                  <i class="fa-solid fa-route" style="padding-right:4px;"></i>
+                  {{ reservation.estimatedKm }}km
+                </p>
+                <p>
+                  <ion-icon name="person"></ion-icon> 
+                  {{ reservation.userName }}
+                </p>
+              </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      
         <p *ngIf="getReservationsForVehicle(vehicle.licensePlate).length === 0">No hay reservas para este vehículo hasta ahora.</p>
       </div>
     </div>
