--- a/src/app/pages/reservations/reservations.page.scss
+++ b/src/app/pages/reservations/reservations.page.scss
@@ -54,6 +54,7 @@
   margin: 10px 0;
   padding-left: 30px;
   padding-top: 20px;
+  padding-bottom: 20px;
   background: rgba(255, 255, 255, 0.9);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
@@ -74,12 +75,12 @@
 
 /* Tarjeta de reserva */
 .reservation-card {
-  width: 200px;
+  width: calc(50% - 10px); /* Dos tarjetas por fila con margen */
   height: 150px;
   background-color: rgba(255, 255, 255, 0.75);
   border-radius: 5px;
-  padding: 6px; /* Reducir aún más el padding interno */
-  margin-top: 10px;
+  padding: 6px;
+  margin: 5px; /* Margen entre las tarjetas */
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
@@ -116,4 +117,12 @@
 
 ion-icon {
   margin-right: 4px; /* Reducir aún más el espacio entre icono y texto */
+}
+
+/* Fila de reservas */
+.reservations-row {
+  display: flex; /* Cambia a flexbox */
+  flex-wrap: wrap; /* Permite que se ajusten a varias filas si es necesario */
+  justify-content: space-between; /* Espacio entre las tarjetas */
+  margin: 10px 0; /* Añade un margen vertical si es necesario */
 }
