UI fixes, functional app

--- a/src/app/pages/reservations/reservations.page.html
+++ b/src/app/pages/reservations/reservations.page.html
@@ -47,7 +47,7 @@
               {{ formatReservationDate(reservation.endDate) }}
             </p>
             <p>
-              <i class="fa-solid fa-route" style="padding-right:4px;"></i>
+              <i class="fa-solid fa-route" style="padding-right:4px; color: grey;"></i>
               {{ reservation.estimatedKm }}km
             </p>
             <p>
